added 3 sorting functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,3 +3,7 @@ PROJECT(sorting)
 ADD_EXECUTABLE(${PROJECT_NAME} 
 	src/main.cpp
 )
+TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}
+	PRIVATE
+	src/include
+)
